# Bank_Shield

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pre-commit  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  agent_utils.py  inference_template.py  llm_client.py
app/: db.py  main.py  models.py  routes.py
app/env/: __init__.py  base_env.py  transaction_env.py
app/tasks/: __init__.py  base_task.py  easy_task.py  hard_task.py  medium_task.py
data/: transaction_schema.md  transactions_easy.json  transactions_hard.json  transactions_medium.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CustomCursor.tsx  EventLog.tsx  GlobalTelemetry.tsx  Sidebar.tsx  SimulationConsole.tsx  TopNav.tsx  TransactionPayload.tsx
frontend/src/components/views/: ConfigurationsView.tsx  NeuralNetworkView.tsx  SystemLogsView.tsx  TacticalMapView.tsx  ThreatVaultView.tsx
graders/: __init__.py  base_grader.py  easy_grader.py  hard_grader.py  medium_grader.py  reward_utils.py
server/: app.py
tests/: test_api.py  test_env.py  test_graders.py  test_inference.py
